src/objects/Car__c.object
<CustomObject>
    <fields>
        <fullName>CarCountry__c</fullName>
        <label>Car Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>South Korea</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>England</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Value1</fullName>
                    <isActive>false</isActive>
                    <label>Value1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CarTypeId__c</fullName>
        <formula>RelatedCarType__r.CarTypeId__c</formula>
        <label>Car Type Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Car_License__c</fullName>
        <externalId>true</externalId>
        <label>Car License</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RelatedCarType__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Related Car Type</label>
        <referenceTo>CarType__c</referenceTo>
        <relationshipLabel>Cars</relationshipLabel>
        <relationshipName>Cars</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Car</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Car_License__c</columns>
        <columns>CarCountry__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>Car</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>